--- a/rlalgos/CQL/check_gym.ipynb
+++ b/rlalgos/CQL/check_gym.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/tmp/ipykernel_16180/3505350339.py:2: DeprecationWarning: the imp module is deprecated in favour of importlib and slated for removal in Python 3.12; see the module's documentation for alternative uses\n",
+      "  import imp\n",
       "/root/Gymnasium/gymnasium/envs/registration.py:555: UserWarning: \u001b[33mWARN: The environment Ant-v2 is out of date. You should consider upgrading to version `v4`.\u001b[0m\n",
       "  logger.warn(\n",
       "/root/Gymnasium/gymnasium/envs/mujoco/mujoco_env.py:192: UserWarning: \u001b[33mWARN: This version of the mujoco environments depends on the mujoco-py bindings, which are no longer maintained and may stop working. Please upgrade to the v4 versions of the environments (which depend on the mujoco python bindings instead), unless you are trying to precisely replicate previous works).\u001b[0m\n",
@@ -31,7 +33,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                             \r"
+      "                                                                \r"
      ]
     },
     {
@@ -39,45 +41,7 @@
      "output_type": "stream",
      "text": [
       "Moviepy - Done !\n",
-      "Moviepy - video ready /work/gym_results/ant-episode-0.mp4\n",
-      "Saving vidoe\n",
-      "Moviepy - Building video /work/gym_results/ant-episode-1.mp4.\n",
-      "Moviepy - Writing video /work/gym_results/ant-episode-1.mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                              \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready /work/gym_results/ant-episode-1.mp4\n",
-      "Saving vidoe\n",
-      "Moviepy - Building video /work/gym_results/ant-episode-8.mp4.\n",
-      "Moviepy - Writing video /work/gym_results/ant-episode-8.mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                               \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready /work/gym_results/ant-episode-8.mp4\n"
+      "Moviepy - video ready /work/gym_results/ant-episode-0.mp4\n"
      ]
     }
    ],
@@ -146,198 +110,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: Flow failed to import. Set the environment variable D4RL_SUPPRESS_IMPORT_ERROR=1 to suppress this message.\n",
+      "No module named 'flow'\n",
+      "/usr/local/lib/python3.10/dist-packages/glfw/__init__.py:912: GLFWError: (65544) b'X11: The DISPLAY environment variable is missing'\n",
+      "  warnings.warn(message, GLFWError)\n",
+      "Warning: CARLA failed to import. Set the environment variable D4RL_SUPPRESS_IMPORT_ERROR=1 to suppress this message.\n",
+      "No module named 'carla'\n",
+      "/usr/local/lib/python3.10/dist-packages/gym/envs/registration.py:440: UserWarning: \u001b[33mWARN: The `registry.env_specs` property along with `EnvSpecTree` is deprecated. Please use `registry` directly as a dictionary instead.\u001b[0m\n",
+      "  logger.warn(\n",
+      "pybullet build time: Nov 10 2022 04:22:06\n",
+      "/usr/local/lib/python3.10/dist-packages/gym/envs/registration.py:593: UserWarning: \u001b[33mWARN: The environment hopper-medium-v1 is out of date. You should consider upgrading to version `v2`.\u001b[0m\n",
+      "  logger.warn(\n",
+      "/usr/local/lib/python3.10/dist-packages/gym/envs/mujoco/mujoco_env.py:237: UserWarning: \u001b[33mWARN: This version of the mujoco environments depends on the mujoco-py bindings, which are no longer maintained and may stop working. Please upgrade to the v4 versions of the environments (which depend on the mujoco python bindings instead), unless you are trying to precisely replicate previous works).\u001b[0m\n",
+      "  logger.warn(\n",
+      "/work/D4RL/d4rl/gym_mujoco/gym_envs.py:13: UserWarning: \u001b[33mThis environment is deprecated. Please use the most recent version of this environment.\u001b[0m\n",
+      "  offline_env.OfflineEnv.__init__(self, **kwargs)\n",
+      "/usr/local/lib/python3.10/dist-packages/gym/spaces/box.py:128: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "  logger.warn(f\"Box bound precision lowered by casting to {self.dtype}\")\n",
+      "/usr/local/lib/python3.10/dist-packages/gym/core.py:329: DeprecationWarning: \u001b[33mWARN: Initializing wrapper in old step API which returns one bool instead of two. It is recommended to set `new_step_api=True` to use new step API. This will be the default behaviour in future.\u001b[0m\n",
+      "  deprecation(\n",
+      "/usr/local/lib/python3.10/dist-packages/gym/wrappers/step_api_compatibility.py:39: DeprecationWarning: \u001b[33mWARN: Initializing environment in old step API which returns one bool instead of two. It is recommended to set `new_step_api=True` to use new step API. This will be the default behaviour in future.\u001b[0m\n",
+      "  deprecation(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on Box in module gymnasium.spaces.box object:\n",
-      "\n",
-      "class Box(gymnasium.spaces.space.Space)\n",
-      " |  Box(low: Union[SupportsFloat, numpy.ndarray], high: Union[SupportsFloat, numpy.ndarray], shape: Optional[Sequence[int]] = None, dtype: Type = <class 'numpy.float32'>, seed: Union[int, numpy.random._generator.Generator, NoneType] = None)\n",
-      " |  \n",
-      " |  A (possibly unbounded) box in :math:`\\mathbb{R}^n`.\n",
-      " |  \n",
-      " |  Specifically, a Box represents the Cartesian product of n closed intervals.\n",
-      " |  Each interval has the form of one of :math:`[a, b]`, :math:`(-\\infty, b]`,\n",
-      " |  :math:`[a, \\infty)`, or :math:`(-\\infty, \\infty)`.\n",
-      " |  \n",
-      " |  There are two common use cases:\n",
-      " |  \n",
-      " |  * Identical bound for each dimension::\n",
-      " |  \n",
-      " |      >>> Box(low=-1.0, high=2.0, shape=(3, 4), dtype=np.float32)\n",
-      " |      Box(3, 4)\n",
-      " |  \n",
-      " |  * Independent bound for each dimension::\n",
-      " |  \n",
-      " |      >>> Box(low=np.array([-1.0, -2.0]), high=np.array([2.0, 4.0]), dtype=np.float32)\n",
-      " |      Box(2,)\n",
-      " |  \n",
-      " |  Method resolution order:\n",
-      " |      Box\n",
-      " |      gymnasium.spaces.space.Space\n",
-      " |      typing.Generic\n",
-      " |      builtins.object\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __eq__(self, other) -> bool\n",
-      " |      Check whether `other` is equivalent to this instance. Doesn't check dtype equivalence.\n",
-      " |  \n",
-      " |  __init__(self, low: Union[SupportsFloat, numpy.ndarray], high: Union[SupportsFloat, numpy.ndarray], shape: Optional[Sequence[int]] = None, dtype: Type = <class 'numpy.float32'>, seed: Union[int, numpy.random._generator.Generator, NoneType] = None)\n",
-      " |      Constructor of :class:`Box`.\n",
-      " |      \n",
-      " |      The argument ``low`` specifies the lower bound of each dimension and ``high`` specifies the upper bounds.\n",
-      " |      I.e., the space that is constructed will be the product of the intervals :math:`[\\text{low}[i], \\text{high}[i]]`.\n",
-      " |      \n",
-      " |      If ``low`` (or ``high``) is a scalar, the lower bound (or upper bound, respectively) will be assumed to be\n",
-      " |      this value across all dimensions.\n",
-      " |      \n",
-      " |      Args:\n",
-      " |          low (Union[SupportsFloat, np.ndarray]): Lower bounds of the intervals.\n",
-      " |          high (Union[SupportsFloat, np.ndarray]): Upper bounds of the intervals.\n",
-      " |          shape (Optional[Sequence[int]]): The shape is inferred from the shape of `low` or `high` `np.ndarray`s with\n",
-      " |              `low` and `high` scalars defaulting to a shape of (1,)\n",
-      " |          dtype: The dtype of the elements of the space. If this is an integer type, the :class:`Box` is essentially a discrete space.\n",
-      " |          seed: Optionally, you can use this argument to seed the RNG that is used to sample from the space.\n",
-      " |      \n",
-      " |      Raises:\n",
-      " |          ValueError: If no shape information is provided (shape is None, low is None and high is None) then a\n",
-      " |              value error is raised.\n",
-      " |  \n",
-      " |  __repr__(self) -> str\n",
-      " |      A string representation of this space.\n",
-      " |      \n",
-      " |      The representation will include bounds, shape and dtype.\n",
-      " |      If a bound is uniform, only the corresponding scalar will be given to avoid redundant and ugly strings.\n",
-      " |      \n",
-      " |      Returns:\n",
-      " |          A representation of the space\n",
-      " |  \n",
-      " |  __setstate__(self, state: Dict)\n",
-      " |      Sets the state of the box for unpickling a box with legacy support.\n",
-      " |  \n",
-      " |  contains(self, x) -> bool\n",
-      " |      Return boolean specifying if x is a valid member of this space.\n",
-      " |  \n",
-      " |  from_jsonable(self, sample_n: Sequence[Union[float, int]]) -> List[numpy.ndarray]\n",
-      " |      Convert a JSONable data type to a batch of samples from this space.\n",
-      " |  \n",
-      " |  is_bounded(self, manner: str = 'both') -> bool\n",
-      " |      Checks whether the box is bounded in some sense.\n",
-      " |      \n",
-      " |      Args:\n",
-      " |          manner (str): One of ``\"both\"``, ``\"below\"``, ``\"above\"``.\n",
-      " |      \n",
-      " |      Returns:\n",
-      " |          If the space is bounded\n",
-      " |      \n",
-      " |      Raises:\n",
-      " |          ValueError: If `manner` is neither ``\"both\"`` nor ``\"below\"`` or ``\"above\"``\n",
-      " |  \n",
-      " |  sample(self, mask: None = None) -> numpy.ndarray\n",
-      " |      Generates a single random sample inside the Box.\n",
-      " |      \n",
-      " |      In creating a sample of the box, each coordinate is sampled (independently) from a distribution\n",
-      " |      that is chosen according to the form of the interval:\n",
-      " |      \n",
-      " |      * :math:`[a, b]` : uniform distribution\n",
-      " |      * :math:`[a, \\infty)` : shifted exponential distribution\n",
-      " |      * :math:`(-\\infty, b]` : shifted negative exponential distribution\n",
-      " |      * :math:`(-\\infty, \\infty)` : normal distribution\n",
-      " |      \n",
-      " |      Args:\n",
-      " |          mask: A mask for sampling values from the Box space, currently unsupported.\n",
-      " |      \n",
-      " |      Returns:\n",
-      " |          A sampled value from the Box\n",
-      " |  \n",
-      " |  to_jsonable(self, sample_n)\n",
-      " |      Convert a batch of samples from this space to a JSONable data type.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Readonly properties defined here:\n",
-      " |  \n",
-      " |  is_np_flattenable\n",
-      " |      Checks whether this space can be flattened to a :class:`spaces.Box`.\n",
-      " |  \n",
-      " |  shape\n",
-      " |      Has stricter type than gymnasium.Space - never None.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data and other attributes defined here:\n",
-      " |  \n",
-      " |  __annotations__ = {}\n",
-      " |  \n",
-      " |  __hash__ = None\n",
-      " |  \n",
-      " |  __orig_bases__ = (gymnasium.spaces.space.Space[numpy.ndarray],)\n",
-      " |  \n",
-      " |  __parameters__ = ()\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Methods inherited from gymnasium.spaces.space.Space:\n",
-      " |  \n",
-      " |  __contains__(self, x) -> bool\n",
-      " |      Return boolean specifying if x is a valid member of this space.\n",
-      " |  \n",
-      " |  seed(self, seed: Optional[int] = None) -> list\n",
-      " |      Seed the PRNG of this space and possibly the PRNGs of subspaces.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Readonly properties inherited from gymnasium.spaces.space.Space:\n",
-      " |  \n",
-      " |  np_random\n",
-      " |      Lazily seed the PRNG since this is expensive and only needed if sampling from this space.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors inherited from gymnasium.spaces.space.Space:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Class methods inherited from typing.Generic:\n",
-      " |  \n",
-      " |  __class_getitem__(params) from builtins.type\n",
-      " |  \n",
-      " |  __init_subclass__(*args, **kwargs) from builtins.type\n",
-      " |      This method is called when a class is subclassed.\n",
-      " |      \n",
-      " |      The default implementation does nothing. It may be\n",
-      " |      overridden to extend subclasses.\n",
-      "\n"
+      "Downloading dataset: http://rail.eecs.berkeley.edu/datasets/offline_rl/gym_mujoco_v1/hopper_medium-v1.hdf5 to /root/.d4rl/datasets/hopper_medium-v1.hdf5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "load datafile: 100%|██████████| 21/21 [00:00<00:00, 23.42it/s]\n"
      ]
     }
    ],
    "source": [
-    "help(env.action_space)"
+    "## inspect D4RL dataset\n",
+    "import d4rl, gym\n",
+    "env = gym.make(\"hopper-medium-v1\")\n",
+    "d = env.get_dataset()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-inf, inf)"
+       "dict_keys(['actions', 'infos/action_log_probs', 'infos/qpos', 'infos/qvel', 'metadata/algorithm', 'metadata/iteration', 'metadata/policy/fc0/bias', 'metadata/policy/fc0/weight', 'metadata/policy/fc1/bias', 'metadata/policy/fc1/weight', 'metadata/policy/last_fc/bias', 'metadata/policy/last_fc/weight', 'metadata/policy/last_fc_log_std/bias', 'metadata/policy/last_fc_log_std/weight', 'metadata/policy/nonlinearity', 'metadata/policy/output_distribution', 'next_observations', 'observations', 'rewards', 'terminals', 'timeouts'])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "env.reward_range"
+    "d.keys()"
    ]
   }
  ],
